usr/src/lib/old_compiler/dbx/tests/pc/call.out
reading symbolic information ...
[1] stop at 33
[1] stopped in startup at line 33
   33       mainlocal := 19;
in p1

p1 returns successfully
in p2(3)

p2 returns successfully
in p3(blah, 3)

p3 returns successfully
mainlocal = 0
fprintf returns successfully
0 
call call
         ^ syntax error
"call" not call-able
too many parameters in call to p1
type mismatch for frommain in call to p2

